# vitrine-dapp

./: .gitignore  README.md  database.py  hardhat.config.ts  main.py  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  sensor-simulator.js  tsconfig.node.json  vitrine.db
cess_uploader/: Cargo.toml
cess_uploader/src/: main.rs
contracts/: Marketplace.sol  Sunest.sol  VitrineCore.sol  VitrineToken.sol
deploy/: 00_deploy_poe.ts  01_deploy_Sunest.ts
deployments/: localhost.json
deployments/localhost/: ProofOfExistence.json  Sunest.json
dist-node/: autoSensor.js
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.cjs
frontend/extension/: background.js  manifest.json  popup.html  popup.js
frontend/src/: App.tsx  main.tsx  vite.config.ts
frontend/src/abi/: Marketplace.json  PoE.json  Sunest.json  VitrineCore.json  VitrineToken.json
frontend/src/components/: ConnectWallet.tsx  ConnectWalletAdvanced.tsx  CreatorList.tsx  CreatorSeed.tsx  MicrogridInspector.tsx  MyProductsList.tsx  NodeDashboard.tsx  ProductCard.tsx  ProductList.tsx  ProtectedRoute.tsx  RegisterMicrogrid.tsx  RegisterNode.tsx  RegisterProductForm.tsx  StakeForm.tsx  UserDashboard.tsx  UserStatusPanel.tsx
frontend/src/hooks/: useContracts.ts
frontend/src/lib/: strings.ts  web3.ts
frontend/src/pages/: ConnectPage.tsx  CreatorDashboard.tsx  DashboardPage.tsx  HomePage.tsx  MarketplacePage.tsx  ProductInterface.tsx  RegisterProductPage.tsx  (+3 more)
scripts/: copy-abi.js  deploy.ts  register-test-grid.ts  sendTokens.ts
sensor/: autoSensor.ts
test/: Vitrine.test.ts
(+1 files in other folders)
