[package]
name = "cess_uploader"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tempfile = "3.20.0"
tokio = { version = "1.46.1", features = ["full"] }
cess-rust-sdk = { git = "https://github.com/CESSProject/cess-rust-sdk.git" }

